# RAG-service

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  types.ts
frontend/src/components/: DocumentList.tsx  DocumentUpload.tsx  QueryPanel.tsx  Toast.tsx
frontend/src/hooks/: useTheme.ts
migrations/: env.py
migrations/versions/: a3c1d9f2b805_add_content_hash_to_documents.py  f6de80942724_create_documents_and_chunks_tables.py
src/: config.py  main.py
src/api/routes/: documents.py  query.py
src/database/: session.py
src/models/: __init__.py
src/services/: cache_service.py  document_service.py  embedding_service.py  llm_service.py
tasks/: todo.md
tests/: conftest.py  test_documents.py  test_query.py
