[project]
name = "rag-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "redis[hiredis]>=5.0.0",
    "sentence-transformers>=3.0.0",
    "python-multipart>=0.0.9",
    "pypdf2>=3.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "groq>=1.1.2",
    "httpx[socks]>=0.28.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" }
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 88

[dependency-groups]
dev = [
    "asyncio>=4.0.0",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pytest-asyncio]
mode = "auto"